Add subject management for teachers and fix display issues
- Added Subject model with many-to-many relationship to teachers
- Created subject management routes (view, add, edit, delete, assign/unassign)
- Added subject management templates (subjects, add_subject, edit_subject)
- Updated navigation to include Subjects link for teachers and admins
- Added 14 subjects to seed data (English, Kiswahili, Mathematics, etc.)
- Fixed TypeError: changed teachers.count() to len() for list counting
- Fixed Unicode encoding issues in seed function for Windows compatibility
- Added add-subjects CLI command for easy subject population
- Created database migration for Subject model

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
             {% if current_user.is_authenticated %}
               <li class="nav-item"><a class="nav-link" href="{{ url_for('students_page') }}">Students</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('classes_page') }}">Classes</a></li>
+              {% if current_user.role.name in ['Admin', 'Teacher'] %}
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('subjects') }}">Subjects</a></li>
+              {% endif %}
               {% if current_user.role.name == 'Admin' %}
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('teachers') }}">Teachers</a></li>
               {% endif %}
