--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,18 @@
               {% endif %}
               {% if current_user.role.name == 'Admin' %}
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('teachers') }}">Teachers</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('parent_student_links') }}">Parent Links</a></li>
               {% endif %}
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                  {{ current_user.name }}
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('profile') }}">My Profile</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+                </ul>
+              </li>
             {% endif %}
           </ul>
         </div>
